Bug 414092 - Swap Undo After slider does not change the actual value on the right
Summary: Swap Undo After slider does not change the actual value on the right
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.2.7.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-13 11:25 UTC by Tyson Tan
Modified: 2019-11-19 07:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2019-11-13 11:25:17 UTC
Configure Krita -> Performance -> Swap Undo After:
When dragging the slider, the value on the right does not change.
Comment 1 Tyson Tan 2019-11-13 11:27:31 UTC
It seems to only change the value when it goes to very far left, then the value begins to go under the dead-set 81 MB. It does not go anything higher than 81 MB.
Comment 2 Dmitry Kazakov 2019-11-18 15:45:51 UTC
I can confirm. It is related to the change of "pool limit" to be zero. Undo limit gets crazy because of that.
Comment 3 Dmitry Kazakov 2019-11-18 15:55:11 UTC
Git commit e38ce58c7a63e585cb5c53d07688f1dd1cabf77e by Dmitry Kazakov.
Committed on 18/11/2019 at 15:54.
Pushed by dkazakov into branch 'master'.

Fix synchronization of sliders in Performance tab in the Settings

M  +1    -0    libs/ui/dialogs/kis_dlg_preferences.cc

https://invent.kde.org/kde/krita/commit/e38ce58c7a63e585cb5c53d07688f1dd1cabf77e
Comment 4 Dmitry Kazakov 2019-11-18 15:55:21 UTC
Git commit ed3ed6333c7dcbc519f7b10ecc9421c2928c97cb by Dmitry Kazakov.
Committed on 18/11/2019 at 15:55.
Pushed by dkazakov into branch 'krita/4.2'.

Fix synchronization of sliders in Performance tab in the Settings

M  +1    -0    libs/ui/dialogs/kis_dlg_preferences.cc

https://invent.kde.org/kde/krita/commit/ed3ed6333c7dcbc519f7b10ecc9421c2928c97cb
Comment 5 Tyson Tan 2019-11-19 07:34:55 UTC
Thank you, Dmitry! :D