Fix synchronization of sliders in Performance tab in the Settings

BUG:414092